[gd_scene load_steps=12 format=3 uid="uid://byuia0l8a5o8a"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_22ktp"]
[ext_resource type="Texture2D" uid="uid://nra2p7ynw8dc" path="res://Assets/Art/bricks.png" id="2_t7lwi"]
[ext_resource type="Texture2D" uid="uid://vr46yilgcau" path="res://Assets/Art/Road.png" id="3_f5onb"]
[ext_resource type="FontFile" uid="uid://bgjbj7oq2nv44" path="res://Assets/SCG_FONT.ttf" id="4_soe46"]
[ext_resource type="Texture2D" uid="uid://cr0iydjbgn7lt" path="res://Assets/Art/UI Buttons/cross_normal.png" id="5_xbyo7"]
[ext_resource type="Texture2D" uid="uid://c3oii5mxhmg0h" path="res://Assets/Art/UI Buttons/cross_pressed.png" id="6_4oea8"]
[ext_resource type="Texture2D" uid="uid://gg0kmkyx12a3" path="res://Assets/Art/UI Buttons/cross_hover.png" id="7_64n07"]
[ext_resource type="Texture2D" uid="uid://dww6c367uddmo" path="res://Assets/Art/UI Buttons/play_normal.png" id="8_4l4il"]
[ext_resource type="Texture2D" uid="uid://0v1bnl5rcnlb" path="res://Assets/Art/UI Buttons/play_pressed.png" id="9_m3dqu"]
[ext_resource type="Texture2D" uid="uid://naujco7ho1nv" path="res://Assets/Art/UI Buttons/play_hover.png" id="10_fi76w"]
[ext_resource type="Texture2D" uid="uid://b1cxa2j5rfegt" path="res://Assets/Art/Indicator.png" id="11_po4qh"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_22ktp")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 320.0
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("2_t7lwi")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 320.0
mouse_filter = 2
color = Color(0, 0, 0, 0.643137)

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 64.0
scale = Vector2(1.333, 1.333)
mouse_filter = 2
texture = ExtResource("3_f5onb")
stretch_mode = 1

[node name="Top_Title" type="RichTextLabel" parent="."]
offset_left = 82.0
offset_top = 10.0
offset_right = 3402.0
offset_bottom = 470.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("4_soe46")
theme_override_font_sizes/normal_font_size = 256
text = "Settings"

[node name="menu" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("5_xbyo7")
texture_pressed = ExtResource("6_4oea8")
texture_hover = ExtResource("7_64n07")

[node name="test_sfx" type="TextureButton" parent="."]
offset_left = 22.0
offset_top = 194.0
offset_right = 38.0
offset_bottom = 210.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("8_4l4il")
texture_pressed = ExtResource("9_m3dqu")
texture_hover = ExtResource("10_fi76w")

[node name="Top_Title2" type="RichTextLabel" parent="test_sfx"]
layout_mode = 0
offset_left = 17.3333
offset_top = 4.0
offset_right = 3337.33
offset_bottom = 464.0
scale = Vector2(0.025, 0.025)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("4_soe46")
theme_override_font_sizes/normal_font_size = 256
text = "Test SFX Volume"

[node name="music" type="HSlider" parent="."]
offset_left = 60.0
offset_top = 90.0
offset_right = 850.0
offset_bottom = 234.0
scale = Vector2(0.2, 0.2)
theme_override_icons/grabber = ExtResource("11_po4qh")
theme_override_icons/grabber_highlight = ExtResource("11_po4qh")
theme_override_icons/grabber_disabled = ExtResource("11_po4qh")
theme_override_icons/tick = ExtResource("11_po4qh")
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="music_label" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 90.0
offset_right = 1208.0
offset_bottom = 550.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("4_soe46")
theme_override_font_sizes/normal_font_size = 256
text = "Music"

[node name="sfx" type="HSlider" parent="."]
offset_left = 60.0
offset_top = 139.0
offset_right = 850.0
offset_bottom = 288.0
scale = Vector2(0.2, 0.2)
theme_override_icons/grabber = ExtResource("11_po4qh")
theme_override_icons/grabber_highlight = ExtResource("11_po4qh")
theme_override_icons/grabber_disabled = ExtResource("11_po4qh")
theme_override_icons/tick = ExtResource("11_po4qh")
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="sfx_label" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 140.0
offset_right = 1208.0
offset_bottom = 600.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("4_soe46")
theme_override_font_sizes/normal_font_size = 256
text = "SFX"

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="test_sfx" to="." method="_on_test_sfx_pressed"]
[connection signal="value_changed" from="music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="sfx" to="." method="_on_sfx_value_changed"]
